# sleep-proxy

./: .clang-tidy  .gitignore  .gitmodules  .lcovrc  CMakeLists.txt  LICENSE  README  README.md  check-clang-format.sh  clang-format.sh  clang-tidy.sh  meson.build  meson_options.txt
.github/workflows/: clang-format-tidy.yml  clang-format.yml  clang-tidy.yml  meson.yml
cmake/: CompilerFlags.cmake  FindPCAP.cmake  FindVALGRIND.cmake
compiler_warnings/: meson.build
config/: watchHost  watchHost.conf
legacy-build-system/: Makefile.am  Makefile.in  configure  configure.ac  gen-cruft.sh
ndisc/: Makefile
openwrt-autotools/: Makefile
openwrt-buildfiles/: Makefile
openwrt-cmake/: Makefile
openwrt-cmake/files/: watchHost.init
python-prototype/: catchIPv4AndIPv6.py  emulateHost.py  ipparser.py  listservices.py  sleepproxy.py  watchHost.py
src/: CMakeLists.txt  args.cpp  args.h  args_test_interface.h  container_utils.h  duplicate_address_watcher.cpp  duplicate_address_watcher.h  emulateHost.cpp  ethernet.cpp  ethernet.h  file_descriptor.cpp  file_descriptor.h  int_utils.cpp  int_utils.h  ip.cpp  ip.h  ip_address.cpp  ip_address.h  ip_utils.cpp  ip_utils.h  libemulateHost.cpp  libemulateHost.h  libsleep_proxy.cpp  libsleep_proxy.h  libsleep_proxy_test_interface.h  log.cpp  log.h  meson.build  packet_parser.cpp  packet_parser.h  pcap_wrapper.cpp  pcap_wrapper.h  scope_guard.cpp  scope_guard.h  sniffer.cpp  socket.cpp  socket.h  spawn_process.cpp  spawn_process.h  split.cpp  (+11 more)
src/include/: args.h  container_utils.h  duplicate_address_watcher.h  error_suppression.h  ethernet.h  file_descriptor.h  int_utils.h  ip.h  ip_address.h  ip_utils.h  libsleep_proxy.h  log.h  packet_parser.h  pcap_wrapper.h  scope_guard.h  socket.h  spawn_process.h  to_string.h  wol.h  wol_watcher.h
src/sleep-proxy/: args.cpp  duplicate_address_watcher.cpp  ethernet.cpp  file_descriptor.cpp  int_utils.cpp  ip.cpp  ip_address.cpp  ip_utils.cpp  libsleep_proxy.cpp  log.cpp  packet_parser.cpp  pcap_wrapper.cpp  scope_guard.cpp  socket.cpp  spawn_process.cpp  to_string.cpp  wol.cpp  wol_watcher.cpp
tests/: CMakeLists.txt  args_test.cpp  args_test_interface.h  check_range.h  container_tests.cpp  duplicate_address_watcher_test.cpp  ethernet_test.cpp  file_descriptor_test.cpp  int_utils_test.cpp  ip_address_test.cpp  ip_test.cpp  ip_utils_test.cpp  libsleep_proxy_test.cpp  libsleep_proxy_test_interface.h  log_test.cpp  main.cpp  main.h  meson.build  packet_parser_test.cpp  packet_test_utils.cpp  packet_test_utils.h  scope_guard_test.cpp  socket_test.cpp  spawn_process_test.cpp  split_test.cpp  to_string_test.cpp  valgrind.supp  watchhosts  wol_test.cpp  wol_test_interface.h  wol_watcher_test.cpp
tests/packet_test_utils/: CMakeLists.txt  meson.build  packet_test_utils.cpp
tests/packet_test_utils/include/: packet_test_utils.h
