# Copyright (C) 2017  Lutz Reinhardt
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc.,
# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.

project('sleep proxy', 'cpp',
  version : '0.0.1',
  license : 'GPL',
  default_options : ['cpp_std=c++11', 'warning_level=3']
)

# enable all warnings found
warnings = [
  # useful warning to improve c++ code
  '-Weffc++',
  '-Wformat',
  '-Wnull-dereference',
  '-Wswitch-default',
  '-Wswitch-enum',
  '-Wsync-nand',
  '-Wunused-const-variable',
  '-Wstringop-truncation',
  '-Wsuggest-attribute=pure',
  '-Wsuggest-attribute=const',
  '-Wsuggest-attribute=noreturn',
  '-Wsuggest-attribute=format',
  '-Wsuggest-attribute=cold',
  '-Wsuggest-attribute=malloc',
  '-Wsuggest-final-types',
  '-Wsuggest-final-methods',
  '-Wsuggest-override',
  '-Walloc-zero',
  '-Walloca',
  '-Warith-conversion',
  '-Wduplicated-branches',
  '-Wduplicated-cond',
  '-Wtrampolines',
  '-Wfloat-equal',
  '-Wshadow',
  '-Wundef',
  '-Wunused-macros',
  '-Wcast-qual',
  '-Wcast-align',
  '-Wconditionally-supported',
  '-Wconversion',
  '-Wzero-as-null-pointer-constant',
  '-Wuseless-cast',
  '-Wextra-semi',
  '-Wsign-conversion',
  '-Wlogical-op',
  '-Wno-aggressive-loop-optimizations',
  # useful to rethink public/private interfaces of cpp files
  # prints in c++ no warnings for templates, inline functions and functions in
  # anonymous namespace
  '-Wmissing-declarations',
  '-Wopenmp-simd',
  '-Wpacked',
  '-Wredundant-decls',
  '-Winline',
  '-Wvla',
  '-Wdisabled-optimization',
  '-Whsa',
  # warnings from clang
  '-Wabstract-vbase-init',
  '-Warc-maybe-repeated-use-of-weak',
  '-Warc-repeated-use-of-weak',
  '-Warray-bounds-pointer-arithmetic',
  '-Wassign-enum',
  '-Watomic-implicit-seq-cst',
  '-Watomic-properties',
  '-Wauto-import',
  '-Wbad-function-cast',
  '-Wbinary-literal',
  '-Wbitwise-op-parentheses',
  '-Wc++-compat',
  '-Wc++11-extensions',
  '-Wc++11-narrowing',
  '-Wc++11-extra-semi',
  '-Wc++11-long-long',
  '-Wc++11-narrowing',
  '-Wc++14-binary-literal',
  '-Wc++14-extensions',
  '-Wc++17-extensions',
  '-Wc++2a-designator',
  '-Wc++2a-extensions',
  '-Wchar-subscripts',
  '-Wclass-varargs',
  '-Wcomma',
  '-Wcomment',
  '-Wcomplex-component-init',
  '-Wconditional-uninitialized',
  '-Wconsumed',
  '-Wcstring-format-directive',
  '-Wctad-maybe-unsupported',
  '-Wcustom-atomic-properties',
  '-Wdelete-non-virtual-dtor',
  '-Wdeprecated',
  '-Wdirect-ivar-access',
  '-Wdocumentation',
  '-Wdocumentation-pedantic',
  '-Wdocumentation-unknown-command',
  '-Wdollar-in-identifier-extension',
  '-Wdouble-promotion',
  '-Wduplicate-decl-specifier',
  '-Wduplicate-enum',
  '-Wduplicate-method-arg',
  '-Wduplicate-method-match',
  '-Wdynamic-exception-spec',
  '-Wembedded-directive',
  '-Wempty-init-stmt',
  '-Wempty-translation-unit',
  '-Wenum-compare-conditional',
  '-Wenum-conversion',
  '-Wexpansion-to-defined',
  '-Wexplicit-ownership-type',
  '-Wextra-semi-stmt',
  '-Wfixed-enum-extension',
  '-Wflexible-array-extensions',
  '-Wfloat-conversion',
  '-Wfor-loop-analysis',
  '-Wformat-non-iso',
  '-Wformat-nonliteral',
  '-Wformat-pedanti',
  '-Wformat-type-confusion',
  '-Wfour-char-constants',
  '-Wgcc-compat',
  '-Wgnu',
  '-Wheader-guard',
  '-Wheader-hygiene',
  '-Whip-only',
  '-Widiomatic-parentheses',
  '-Wignored-attributes',
  '-Wignored-optimization-argument',
  '-Wignored-pragma-intrinsic',
  '-Wignored-pragma-optimize',
  '-Wignored-pragmas',
  '-Wignored-qualifiers',
  '-Wimplicit',
  '-Wimplicit-atomic-properties',
  '-Wimplicit-conversion-floating-point-to-bool',
  '-Wimplicit-exception-spec-mismatch',
  '-Wimplicit-fallthrough',
  '-Wimplicit-fallthrough-per-function',
  '-Wimplicit-fixed-point-conversion',
  '-Wimplicit-float-conversion',
  '-Wimplicit-function-declaration',
  '-Wimplicit-int',
  '-Wimplicit-int-conversion',
  '-Wimplicit-int-float-conversion',
  '-Wimplicit-retain-self',
  '-Wimplicitly-unsigned-literal',
  '-Wimport',
  '-Wimport-preprocessor-directive-pedantic',
  '-Winaccessible-base',
  '-Winclude-next-absolute-path',
  '-Winclude-next-outside-header',
  '-Wincompatible-exception-spec',
  '-Wincompatible-function-pointer-types',
  '-Wincompatible-library-redeclaration',
  '-Wincompatible-ms-struct',
  '-Wincompatible-pointer-types',
  '-Wincompatible-pointer-types-discards-qualifiers',
  '-Wincompatible-property-type',
  '-Wincompatible-sysroot',
  '-Wincomplete-framework-module-declaration',
  '-Wincomplete-implementation',
  '-Wincomplete-module',
  '-Wincomplete-setjmp-declaration',
  '-Wincomplete-umbrella',
  '-Winconsistent-missing-destructor-override',
  '-Winconsistent-missing-override',
  '-Wincrement-bool',
  '-Winfinite-recursion',
  '-Winit-self',
  '-Winitializer-overrides',
  '-Winjected-class-name',
  '-Wint-in-bool-context',
  '-Winvalid-command-line-argument',
  '-Winvalid-constexpr',
  '-Winvalid-iboutlet',
  '-Winvalid-initializer-from-system-header',
  '-Winvalid-ios-deployment-target',
  '-Winvalid-no-builtin-names',
  '-Winvalid-noreturn',
  '-Winvalid-offsetof',
  '-Winvalid-or-nonexistent-directory',
  '-Winvalid-partial-specialization',
  '-Winvalid-pch',
  '-Winvalid-pp-token',
  '-Winvalid-source-encoding',
  '-Winvalid-token-paste',
  '-Wjump-seh-finally',
  '-Wkeyword-compat',
  '-Wkeyword-macro',
  '-Wknr-promoted-parameter',
  '-Wlanguage-extension-token',
  '-Wlarge-by-value-copy',
  '-Wliblto',
  '-Wliteral-conversion',
  '-Wliteral-range',
  '-Wlogical-not-parentheses',
  '-Wlogical-op-parentheses',
  '-Wlong-long',
  '-Wloop-analysis',
  '-Wmacro-redefined',
  '-Wmain',
  '-Wmain-return-type',
  '-Wmalformed-warning-check',
  '-Wmany-braces-around-scalar-init',
  '-Wmax-tokens',
  '-Wmax-unsigned-zero',
  '-Wmemset-transposed-args',
  '-Wmemsize-comparison',
  '-Wmethod-signatures',
  '-Wmicrosoft',
  '-Wmisexpect',
  '-Wmisleading-indentation',
  '-Wmismatched-new-delete',
  '-Wmismatched-parameter-types',
  '-Wmismatched-return-types',
  '-Wmissing-braces',
  '-Wmissing-constinit',
  '-Wmissing-exception-spec',
  '-Wmissing-field-initializers',
  '-Wmissing-format-attribute',
  '-Wmissing-include-dirs',
  '-Wmissing-method-return-type',
  '-Wmissing-noescape',
  '-Wmissing-noreturn',
  '-Wmissing-prototype-for-cc',
  '-Wmissing-prototypes',
  '-Wmissing-selector-name',
  '-Wmissing-sysroot',
  '-Wmissing-variable-declarations',
  '-Rmodule-build',
  '-Wmodule-conflict',
  '-Wmodule-file-config-mismatch',
  '-Wmodule-file-extension',
  '-Rmodule-import',
  '-Wmodule-import-in-extern-c',
  '-Wmodules-ambiguous-internal-linkage',
  '-Wmodules-import-nested-redundant',
  '-Wmost',
  '-Wmove',
  '-Wmsvc-include',
  '-Wmsvc-not-found',
  '-Wmultichar',
  '-Wmultiple-move-vbase',
  '-Wnarrowing',
  '-Wnested-anon-types',
  '-Wnested-externs',
  '-Wnew-returns-null',
  '-Wnewline-eof',
  '-Wnoexcept-type',
  '-Wnon-gcc',
  '-Wnon-modular-include-in-framework-module',
  '-Wnon-modular-include-in-module',
  '-Wnon-virtual-dtor',
  '-Wnull-pointer-arithmetic',
  '-Wnullability-extension',
  '-Wnullable-to-nonnull-conversion',
  '-Wodr',
  '-Wold-style-cast',
  '-Wold-style-definition',
  '-Wopencl-unsupported-rgba',
  '-Wopenmp',
  '-Wopenmp-clauses',
  '-Wopenmp-loop-form',
  '-Wopenmp-mapping',
  '-Wopenmp-target',
  '-Woption-ignored',
  '-Wordered-compare-function-pointers',
  '-Wout-of-line-declaration',
  '-Wout-of-scope-function',
  '-Wover-aligned',
  '-Woverflow',
  '-Woverlength-strings',
  '-Woverloaded-shift-op-parentheses',
  '-Woverloaded-virtual',
  '-Woverride-init',
  '-Woverride-module',
  '-Woverriding-method-mismatch',
  '-Woverriding-t-option',
  '-Wparentheses',
  '-Wparentheses-equality',
  '-Wpartial-availability',
  '-Rpass',
  '-Rpass-analysis',
  '-Wpass-failed',
  '-Rpass-missed',
  '-Wpch-date-time',
  '-Wpedantic-core-features',
  '-Wpessimizing-move',
  '-Wpointer-arith',
  '-Wpointer-bool-conversion',
  '-Wpointer-compare',
  '-Wpointer-integer-compare',
  '-Wpointer-sign',
  '-Wpointer-to-int-cast',
  '-Wpointer-type-mismatch',
  '-Wpoison-system-directories',
  '-Wpotentially-evaluated-expression',
  '-Wpragma-clang-attribute',
  '-Wpragma-once-outside-header',
  '-Wpragma-pack',
  '-Wpragma-pack-suspicious-include',
  '-Wpragma-system-header-outside-header',
  '-Wpragmas',
  '-Wpredefined-identifier-outside-function',
  '-Wprivate-extern',
  '-Wprivate-header',
  '-Wprivate-module',
  '-Wprofile-instr-missing',
  '-Wprofile-instr-out-of-date',
  '-Wprofile-instr-unprofiled',
  '-Wqualified-void-return-type',
  '-Wquoted-include-in-framework-header',
  '-Wrange-loop-analysis',
  '-Wrange-loop-bind-reference',
  '-Wrange-loop-construct',
  '-Wreadonly-iboutlet-property',
  '-Wreceiver-expr',
  '-Wreceiver-forward-class',
  '-Wredundant-move',
  '-Wredundant-parens',
  '-Wregister',
  '-Wreinterpret-base-class',
  '-Rremark-backend-plugin',
  '-Wreorder',
  '-Wreorder-ctor',
  '-Wreorder-init-list',
  '-Wrequires-expression',
  '-Wrequires-super-attribute',
  '-Wreserved-id-macro',
  '-Wreserved-user-defined-literal',
  '-Wretained-language-linkage',
  '-Wreturn-stack-address',
  '-Wreturn-std-move',
  '-Wreturn-std-move-in-c++11',
  '-Wreturn-type',
  '-Wreturn-type-c-linkage',
  '-Rsanitize-address',
  '-Wsection',
  '-Wselector-type-mismatch',
  '-Wself-assign',
  '-Wself-assign-field',
  '-Wself-assign-overloaded',
  '-Wself-move',
  '-Wsemicolon-before-method-body',
  '-Wsentinel',
  '-Wsequence-point',
  '-Wserialized-diagnostics',
  '-Wshadow-all',
  '-Wshadow-field-in-constructor-modified',
  '-Wshift-count-negative',
  '-Wshift-count-overflow',
  '-Wshift-negative-value',
  '-Wshift-op-parentheses',
  '-Wshift-overflow',
  '-Wshift-sign-overflow',
  '-Wshorten-64-to-32',
  '-Wsign-compare',
  '-Wsign-promo',
  '-Wsigned-enum-bitfield',
  '-Wsigned-unsigned-wchar',
  '-Wsizeof-array-argument',
  '-Wsizeof-array-decay',
  '-Wsizeof-array-div',
  '-Wsizeof-pointer-div',
  '-Wsizeof-pointer-memaccess',
  '-Wslash-u-filename',
  '-Wsometimes-uninitialized',
  '-Wsource-uses-openmp',
  '-Wspir-compat',
  '-Wstack-exhausted',
  '-Wstack-protector',
  '-Wstatic-float-init',
  '-Wstatic-in-inline',
  '-Wstatic-inline-explicit-instantiation',
  '-Wstatic-local-in-inline',
  '-Wstatic-self-init',
  '-Wstdlibcxx-not-found',
  '-Wstrict-prototypes',
  '-Wstring-compare',
  '-Wstring-conversion',
  '-Wstring-plus-char',
  '-Wstring-plus-int',
  '-Wstrlcpy-strlcat-size',
  '-Wstrncat-size',
  '-Wsuper-class-method-mismatch',
  '-Wsuspicious-bzero',
  '-Wsuspicious-memaccess',
  '-Wswitch',
  '-Wswitch-bool',
  '-Wsync-fetch-and-nand-semantics-changed',
  '-Wsynth',
  '-Wtautological-bitwise-compare',
  '-Wtautological-compare',
  '-Wtautological-constant-compare',
  '-Wtautological-constant-in-range-compare',
  '-Wtautological-constant-out-of-range-compare',
  '-Wtautological-objc-bool-compare',
  '-Wtautological-overlap-compare',
  '-Wtautological-pointer-compare',
  '-Wtautological-type-limit-compare',
  '-Wtautological-undefined-compare',
  '-Wtautological-unsigned-enum-zero-compare',
  '-Wtautological-unsigned-zero-compare',
  '-Wtentative-definition-incomplete-type',
  '-Wthread-safety',
  '-Wthread-safety-analysis',
  '-Wthread-safety-attributes',
  '-Wthread-safety-beta',
  '-Wthread-safety-negative',
  '-Wthread-safety-precise',
  '-Wthread-safety-reference',
  '-Wthread-safety-verbose',
  '-Wtrigraphs',
  '-Wtype-limits',
  '-Wtype-limits',
  '-Wtype-safety',
  '-Wtypedef-redefinition',
  '-Wtypename-missing',
  '-Wunable-to-open-stats-file',
  '-Wunavailable-declarations',
  '-Wundefined-func-template',
  '-Wundefined-internal-type',
  '-Wundefined-reinterpret-cast',
  '-Wunguarded-availability',
  '-Wuninitialized',
  '-Wunknown-pragmas',
  '-Wunreachable-code-aggressive',
  '-Wunreachable-code-loop-increment',
  '-Wunsupported-dll-base-class-template',
  '-Wunused',
  '-Wunused-exception-parameter',
  '-Wunused-member-function',
  '-Wunused-parameter',
  '-Wunused-template',
  '-Wused-but-marked-unused',
  '-Wvariadic-macros',
  '-Wvector-conversion',
  '-Wvla-extension',
  '-Wweak-template-vtables',
  '-Wzero-length-array'
]

compiler = meson.get_compiler('cpp')
foreach w: warnings
  if (compiler.has_argument(w))
    add_global_arguments(w, language: 'cpp')
  endif
endforeach

subdir('src')

cppunit_dep = dependency('cppunit', required: false)
if cppunit_dep.found()
  subdir('tests')
endif
