# Copyright (C) 2020  Lutz Reinhardt
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc.,
# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.

# enable all warnings found
warnings = [
  # useful warning to improve c++ code
  '-Weffc++',
  '-Wformat',
  '-Wnull-dereference',
  '-Wswitch-default',
  '-Wswitch-enum',
  '-Wsync-nand',
  '-Wunused-const-variable',
  '-Wstringop-truncation',
  '-Wsuggest-attribute=pure',
  '-Wsuggest-attribute=const',
  '-Wsuggest-attribute=noreturn',
  '-Wsuggest-attribute=format',
  '-Wsuggest-attribute=cold',
  '-Wsuggest-attribute=malloc',
  '-Wsuggest-final-types',
  '-Wsuggest-final-methods',
  '-Wsuggest-override',
  '-Walloc-zero',
  '-Walloca',
  '-Warith-conversion',
  '-Wduplicated-branches',
  '-Wduplicated-cond',
  '-Wtrampolines',
  '-Wfloat-equal',
  '-Wshadow',
  '-Wundef',
  '-Wunused-macros',
  '-Wcast-qual',
  '-Wcast-align',
  '-Wconditionally-supported',
  '-Wzero-as-null-pointer-constant',
  '-Wuseless-cast',
  '-Wextra-semi',
  '-Wsign-conversion',
  '-Wlogical-op',
  '-Wno-aggressive-loop-optimizations',
  # useful to rethink public/private interfaces of cpp files
  # prints in c++ no warnings for templates, inline functions and functions in
  # anonymous namespace
  '-Wmissing-declarations',
  '-Wopenmp-simd',
  '-Wpacked',
  '-Wredundant-decls',
  '-Winline',
  '-Wvla',
  '-Wdisabled-optimization',
  '-Whsa',
  # warnings from clang
  '-Wabstract-vbase-init',
  '-Warc-maybe-repeated-use-of-weak',
  '-Warc-repeated-use-of-weak',
  '-Warray-bounds-pointer-arithmetic',
  '-Wassign-enum',
  '-Watomic-implicit-seq-cst',
  '-Watomic-properties',
  '-Wauto-import',
  '-Wbad-function-cast',
  '-Wbinary-literal',
  '-Wbitwise-op-parentheses',
  '-Wc++-compat',
  '-Wc++11-extensions',
  '-Wc++11-narrowing',
  '-Wc++11-narrowing',
  '-Wc++14-extensions',
  '-Wc++17-extensions',
  '-Wc++2a-extensions',
  '-Wclass-varargs',
  '-Wcomma',
  '-Wconditional-uninitialized',
  '-Wconsumed',
  '-Wcstring-format-directive',
  '-Wctad-maybe-unsupported',
  '-Wcustom-atomic-properties',
  '-Wdeprecated',
  '-Wdirect-ivar-access',
  '-Wdocumentation',
  '-Wdocumentation-pedantic',
  '-Wdocumentation-unknown-command',
  '-Wdouble-promotion',
  '-Wduplicate-decl-specifier',
  '-Wduplicate-enum',
  '-Wduplicate-method-arg',
  '-Wduplicate-method-match',
  '-Wdynamic-exception-spec',
  '-Wenum-compare-conditional',
  '-Wenum-conversion',
  '-Wexpansion-to-defined',
  '-Wexplicit-ownership-type',
  '-Wextra-semi-stmt',
  '-Wfloat-conversion',
  '-Wformat-non-iso',
  '-Wformat-nonliteral',
  '-Wformat-pedanti',
  '-Wformat-type-confusion',
  '-Wgcc-compat',
  '-Wgnu',
  '-Wheader-guard',
  '-Wheader-hygiene',
  '-Whip-only',
  '-Widiomatic-parentheses',
  '-Wignored-attributes',
  '-Wignored-optimization-argument',
  '-Wignored-pragma-intrinsic',
  '-Wignored-pragma-optimize',
  '-Wignored-pragmas',
  '-Wimplicit-atomic-properties',
  '-Wimplicit-fallthrough',
  '-Wimplicit-float-conversion',
  '-Wimplicit-int-conversion',
  '-Wimplicit-retain-self',
  '-Wimport',
  '-Winaccessible-base',
  '-Winclude-next-absolute-path',
  '-Winclude-next-outside-header',
  '-Wincompatible-exception-spec',
  '-Wincompatible-function-pointer-types',
  '-Wincompatible-library-redeclaration',
  '-Wincompatible-ms-struct',
  '-Wincompatible-pointer-types',
  '-Wincompatible-pointer-types-discards-qualifiers',
  '-Wincompatible-property-type',
  '-Wincompatible-sysroot',
  '-Wincomplete-framework-module-declaration',
  '-Wincomplete-implementation',
  '-Wincomplete-module',
  '-Wincomplete-setjmp-declaration',
  '-Wincomplete-umbrella',
  '-Winconsistent-missing-destructor-override',
  '-Winconsistent-missing-override',
  '-Wincrement-bool',
  '-Wknr-promoted-parameter',
  '-Wlarge-by-value-copy',
  '-Wliblto',
  '-Wliteral-conversion',
  '-Wlogical-not-parentheses',
  '-Wlogical-op-parentheses',
  '-Wloop-analysis',
  '-Wmacro-redefined',
  '-Wmain',
  '-Wmain-return-type',
  '-Wmalformed-warning-check',
  '-Wmany-braces-around-scalar-init',
  '-Wmax-tokens',
  '-Wmax-unsigned-zero',
  '-Wmemset-transposed-args',
  '-Wmemsize-comparison',
  '-Wmethod-signatures',
  '-Wmicrosoft',
  '-Wmisexpect',
  '-Wmissing-noreturn',
  '-Wmissing-prototypes',
  '-Wmissing-variable-declarations',
  '-Rmodule-build',
  '-Wmodule-conflict',
  '-Wmodule-file-config-mismatch',
  '-Wmodule-file-extension',
  '-Rmodule-import',
  '-Wnewline-eof',
  '-Wnon-gcc',
  '-Wnon-modular-include-in-framework-module',
  '-Wnon-modular-include-in-module',
  '-Wnon-virtual-dtor',
  '-Wnullable-to-nonnull-conversion',
  '-Wodr',
  '-Wold-style-cast',
  '-Wold-style-definition',
  '-Wopencl-unsupported-rgba',
  '-Wopenmp',
  '-Wopenmp-clauses',
  '-Wopenmp-loop-form',
  '-Wopenmp-mapping',
  '-Wopenmp-target',
  '-Woption-ignored',
  '-Wordered-compare-function-pointers',
  '-Wout-of-line-declaration',
  '-Wout-of-scope-function',
  '-Wover-aligned',
  '-Woverflow',
  '-Woverloaded-shift-op-parentheses',
  '-Woverride-init',
  '-Woverride-module',
  '-Woverriding-method-mismatch',
  '-Woverriding-t-option',
  '-Wparentheses-equality',
  '-Wpartial-availability',
  '-Rpass',
  '-Rpass-analysis',
  '-Wpass-failed',
  '-Rpass-missed',
  '-Wpch-date-time',
  '-Wpedantic-core-features',
  '-Wpointer-arith',
  '-Wpointer-bool-conversion',
  '-Wpointer-compare',
  '-Wpointer-integer-compare',
  '-Wpointer-sign',
  '-Wpointer-to-int-cast',
  '-Wpointer-type-mismatch',
  '-Wpoison-system-directories',
  '-Wpotentially-evaluated-expression',
  '-Wpragma-clang-attribute',
  '-Wpragma-once-outside-header',
  '-Wpragma-pack',
  '-Wpragma-pack-suspicious-include',
  '-Wpragma-system-header-outside-header',
  '-Wpragmas',
  '-Wpredefined-identifier-outside-function',
  '-Wprivate-header',
  '-Wprivate-module',
  '-Wprofile-instr-missing',
  '-Wprofile-instr-out-of-date',
  '-Wprofile-instr-unprofiled',
  '-Wqualified-void-return-type',
  '-Wquoted-include-in-framework-header',
  '-Wrange-loop-analysis',
  '-Wrange-loop-bind-reference',
  '-Wreadonly-iboutlet-property',
  '-Wreceiver-expr',
  '-Wreceiver-forward-class',
  '-Wredundant-parens',
  '-Wregister',
  '-Wreinterpret-base-class',
  '-Rremark-backend-plugin',
  '-Wreorder-ctor',
  '-Wreorder-init-list',
  '-Wrequires-expression',
  '-Wrequires-super-attribute',
  '-Wreserved-id-macro',
  '-Wreserved-user-defined-literal',
  '-Wreturn-stack-address',
  '-Wreturn-std-move-in-c++11',
  '-Wreturn-type-c-linkage',
  '-Rsanitize-address',
  '-Wsection',
  '-Wselector-type-mismatch',
  '-Wsentinel',
  '-Wsequence-point',
  '-Wserialized-diagnostics',
  '-Wshadow-all',
  '-Wshadow-field-in-constructor-modified',
  '-Wshift-count-negative',
  '-Wshift-count-overflow',
  '-Wshift-negative-value',
  '-Wshift-op-parentheses',
  '-Wshift-overflow',
  '-Wshift-sign-overflow',
  '-Wshorten-64-to-32',
  '-Wsign-promo',
  '-Wsigned-enum-bitfield',
  '-Wsigned-unsigned-wchar',
  '-Wsizeof-array-div',
  '-Wsizeof-pointer-div',
  '-Wsizeof-pointer-memaccess',
  '-Wslash-u-filename',
  '-Wsometimes-uninitialized',
  '-Wsource-uses-openmp',
  '-Wspir-compat',
  '-Wstack-exhausted',
  '-Wstack-protector',
  '-Wstatic-float-init',
  '-Wstatic-in-inline',
  '-Wstatic-inline-explicit-instantiation',
  '-Wstatic-local-in-inline',
  '-Wstatic-self-init',
  '-Wstdlibcxx-not-found',
  '-Wstrict-prototypes',
  '-Wstring-compare',
  '-Wstring-conversion',
  '-Wstring-plus-char',
  '-Wstrlcpy-strlcat-size',
  '-Wstrncat-size',
  '-Wsuper-class-method-mismatch',
  '-Wsuspicious-bzero',
  '-Wsuspicious-memaccess',
  '-Wsync-fetch-and-nand-semantics-changed',
  '-Wsynth',
  '-Wtautological-constant-in-range-compare',
  '-Wtentative-definition-incomplete-type',
  '-Wthread-safety',
  '-Wthread-safety-beta',
  '-Wthread-safety-negative',
  '-Wthread-safety-verbose',
  '-Wundefined-func-template',
  '-Wundefined-reinterpret-cast',
  '-Wunguarded-availability',
  '-Wunreachable-code-aggressive',
  '-Wunreachable-code-loop-increment',
  '-Wunsupported-dll-base-class-template',
  '-Wunused-exception-parameter',
  '-Wunused-member-function',
  '-Wunused-template',
  '-Wused-but-marked-unused',
  '-Wvariadic-macros',
  '-Wvector-conversion',
  '-Wweak-template-vtables'
]

compiler = meson.get_compiler('cpp')
foreach w: warnings
  if (compiler.has_argument(w))
    add_global_arguments(w, language: 'cpp')
  endif
endforeach

